[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Tile.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Solid_white_bordered.svg.png" type="Texture" id=2]
[ext_resource path="res://Sprites/highlight.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19, 19 )

[node name="Tile" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.721569, 0.721569, 0.721569, 1 )
position = Vector2( -33.0638, -17.4118 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 2 )
offset = Vector2( 661.276, 348.235 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="UnitPlaceholder" type="Sprite" parent="."]

[node name="HighlightPlaceholder" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.517647 )
texture = ExtResource( 3 )
[connection signal="input_event" from="." to="." method="_on_Tile_input_event"]
